Add async fetch from JSONs.

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <title>The Jungle Can't Happen Here in Wonderland</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                 style="max-width: 100%;">
             <img src="img/authors.gif" alt="" style="max-width: 100%;">
             <a href="about.html">About</a>
-            <button class="btn btn-success" id="generate-button">Generate</button>
+            <button id="generate-button">Generate</button>
             <button id="dark-mode-toggle">Light mode</button>
         </div>
         <div class="right-col">
@@ -34,8 +34,8 @@
         </div>
     </div>
 
-    <script src="parser.js" async defer></script>
     <script src="theme.js" async defer></script>
+    <script src="quotes.js" async defer></script>
 </body>
 
 </html>
