Fetch from a single json.

--- a/Index.html
+++ b/Index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="right-col">
             <blockquote id="jungle-quote" cite="https://en.wikipedia.org/wiki/The_Jungle">
-                JungleString
+                The Jungle
             </blockquote>
             <blockquote id="happen-quote" cite="https://en.wikipedia.org/wiki/It_Can%27t_Happen_Here">
-                HappenString
+                Can't Happen Here
             </blockquote>
             <blockquote id="wonderland-quote" cite="https://en.wikipedia.org/wiki/Alice%27s_Adventures_in_Wonderland">
-                WonderlandString
+                In Wonderland
             </blockquote>
 
         </div>
