Add background SVGs and social buttons.

--- a/Index.html
+++ b/Index.html
@@ -13,12 +13,21 @@
 <body>
     <div class="flex-container">
         <div class="left-col">
-            <img src="img/title_no_border.png" alt="The Jungle Can't Happen Here In Wonderland"
+
+            <img class="mult" src="img/title.svg" alt="The Jungle Can't Happen Here In Wonderland"
                 style="max-width: 100%;">
-            <img src="img/authors.gif" alt="" style="max-width: 100%;">
-            <a href="about.html">About</a>
-            <button id="generate-button">Generate</button>
-            <button id="dark-mode-toggle">Light mode</button>
+            <img class="bg-img mult" id="clock" src="img/cover.svg" alt="An image of an old pocket watch."
+                style="max-width: 100%;">
+
+            <!-- <button id="generate-button">Generate</button> -->
+            <div class="buttons">
+                <button><img class="btn-img" src="img/icon_copy.svg" alt="Copy icon"></button>
+                <button><img class="btn-img" src="img/icon_twitter.svg" alt="Twitter icon"></button>
+                <button><img class="btn-img" src="img/icon_insta.svg" alt="Instagram icon"></button>
+                <button id="dark-mode-toggle"><img class="btn-img" src="img/icon_darkmode.svg"
+                        alt="Dark mode toggle"></button>
+            </div>
+
         </div>
         <div class="right-col">
             <blockquote id="jungle-quote" cite="https://en.wikipedia.org/wiki/The_Jungle">
@@ -30,7 +39,6 @@
             <blockquote id="wonderland-quote" cite="https://en.wikipedia.org/wiki/Alice%27s_Adventures_in_Wonderland">
                 In Wonderland
             </blockquote>
-
         </div>
     </div>
 
