--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,13 @@
     <div class="flex-container">
         <div class="left-col">
 
-            <img class="mult" src="img/title.svg" alt="The Jungle Can't Happen Here In Wonderland"
+            <img class="svg title mult" src="img/title.svg" alt="The Jungle Can't Happen Here In Wonderland"
                 style="max-width: 100%;">
-            <img class="bg-img mult" id="clock" src="img/cover.svg" alt="An image of an old pocket watch."
-                style="max-width: 100%;">
+
+            <svg fill="#008000">
+                <img class="bg-img mult" id="clock" src="img/cover.svg" alt="An image of an old pocket watch."
+                    style="max-width: 100%;">
+            </svg>
 
             <!-- <button id="generate-button">Generate</button> -->
             <div class="buttons">
