--- a/Index.html
+++ b/Index.html
@@ -85,8 +85,8 @@
                                 <button><a href="https://www.instagram.com/thejunglecan/" target="_">
                                                 <img class="btn-img" src="img/icon_insta.svg" alt="Instagram icon">
                                         </a></button>
-                                <button id="theme-toggle"><svg class="btn-img" width="800px" height="800px"
-                                                viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                                <button id="theme-toggle" style="cursor:pointer;"><svg class="btn-img" width="800px"
+                                                height="800px" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
                                                 <title>dark-mode</title>
                                                 <g id="Layer_2" data-name="Layer 2">
                                                         <g id="Icons">
@@ -121,13 +121,11 @@
         <footer>
                 <p>&copy; 2023 <a class="folder-tab" href="https://www.hollyburdorff.com/" target="_">Holly Burdorff</a>
                         and
-                        <a class="folder-tab" href="http://aberrator.com">Justin
-                                Linton</a>
+                        <a class="folder-tab" href="http://aberrator.com">Justin Linton</a>
                 </p>
-                <p><i>Inspired by the current state of things.</i></p>
 
                 <div class="footer-right">
-                        <button><a href="https://ko-fi.com" target="_"><svg id="Layer_1" height="16" width="200"
+                        <button id="kofi"><a href="https://ko-fi.com" target="_"><svg height="22" width="80"
                                                 data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 101 40">
                                                 <defs>
@@ -186,7 +184,7 @@
                                                         d="M92.3,13.5a1.43,1.43,0,0,0-.3,1.1v1.2h2.3a1.37,1.37,0,0,1,1.4,1.4,1.37,1.37,0,0,1-1.4,1.4H92v8.9a1.5,1.5,0,0,1-.4,1.1,1.57,1.57,0,0,1-2.2,0,1.5,1.5,0,0,1-.4-1.1V18.6H87.7a1.37,1.37,0,0,1-1.4-1.4,1.37,1.37,0,0,1,1.4-1.4h1.4V14.6a4,4,0,0,1,1.3-3.1,5.17,5.17,0,0,1,3.7-1.2,2.93,2.93,0,0,1,1.6.4,1.21,1.21,0,0,1,.7,1.2,1.69,1.69,0,0,1-.3,1,1.27,1.27,0,0,1-.9.4h-.6c-.3-.1-.7-.1-1-.2A1.7,1.7,0,0,0,92.3,13.5Zm5.3.1a1,1,0,0,1-.3-1v-.5a1.16,1.16,0,0,1,.4-1,2.66,2.66,0,0,1,1.2-.3,2.38,2.38,0,0,1,1.2.3,1.28,1.28,0,0,1,.4,1v.5a1.28,1.28,0,0,1-.4,1,2.77,2.77,0,0,1-1.3.3A2.66,2.66,0,0,1,97.6,13.6Zm2.3,15a1.19,1.19,0,0,1-1.1.4,1.38,1.38,0,0,1-1.5-1.5V17.1a1.5,1.5,0,0,1,.4-1.1,1.19,1.19,0,0,1,1.1-.4,1.38,1.38,0,0,1,1.5,1.5V27.5a1.19,1.19,0,0,1-.4,1.1Z" />
                                         </svg></a></button>
 
-                        <button><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg height="32"
+                        <button><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg height="22"
                                                 aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32"
                                                 data-view-component="true"
                                                 class="octicon octicon-mark-github v-align-middle color-fg-default">
@@ -194,7 +192,6 @@
                                                         d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
                                                 </path>
                                         </svg></a></button>
-
                 </div>
         </footer>
 
