--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <div class="flex-container">
+        <div class="flex-wrapper">
                 <div class="left-col">
 
                         <svg id="title" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="612" height="792"
@@ -81,28 +81,47 @@
                         </svg>
 
                         <div class="buttons-container">
-                                <!-- <button><img class="btn-img" src="img/icon_twitter.svg" alt="Twitter icon"></button> -->
-                                <button><a href="https://www.instagram.com/thejunglecan/" target="_">
-                                                <img class="btn-img" src="img/icon_insta.svg" alt="Instagram icon">
-                                        </a></button>
-                                <button id="theme-toggle" style="cursor:pointer;"><svg class="btn-img" width="800px"
-                                                height="800px" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-                                                <title>dark-mode</title>
-                                                <g id="Layer_2" data-name="Layer 2">
-                                                        <g id="Icons">
-                                                                <g>
-                                                                        <rect width="48" height="48" fill="none" />
+                                <div class="flex-container">
+                                        <button class="btn-pop" id="theme-toggle">
+                                                <svg class="btn-img" width="800px" height="800px" viewBox="0 0 48 48"
+                                                        xmlns="http://www.w3.org/2000/svg">
+                                                        <title>dark-mode</title>
+                                                        <g id="Layer_2" data-name="Layer 2">
+                                                                <g id="Icons">
                                                                         <g>
-                                                                                <path
-                                                                                        d="M14,24A10,10,0,0,0,24,34V14A10,10,0,0,0,14,24Z" />
-                                                                                <path
-                                                                                        d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM6,24A18.1,18.1,0,0,1,24,6v8a10,10,0,0,1,0,20v8A18.1,18.1,0,0,1,6,24Z" />
+                                                                                <rect width="48" height="48"
+                                                                                        fill="none" />
+                                                                                <g>
+                                                                                        <path
+                                                                                                d="M14,24A10,10,0,0,0,24,34V14A10,10,0,0,0,14,24Z" />
+                                                                                        <path
+                                                                                                d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM6,24A18.1,18.1,0,0,1,24,6v8a10,10,0,0,1,0,20v8A18.1,18.1,0,0,1,6,24Z" />
+                                                                                </g>
                                                                         </g>
                                                                 </g>
                                                         </g>
-                                                </g>
-                                        </svg></button>
+                                                </svg>
+                                        </button>
+                                        <button class="btn-pop" id="generate">
+                                                <svg class="btn-img" width="16px" height="16px" viewBox="0 0 32 32"
+                                                        version="1.1" xmlns="http://www.w3.org/2000/svg"
+                                                        xmlns:xlink="http://www.w3.org/1999/xlink"
+                                                        xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+
+                                                        <g id="Icon-Set-Filled" sketch:type="MSLayerGroup"
+                                                                transform="translate(-154.000000, -1141.000000)">
+                                                                <path d="M184.858,1143.56 C185.397,1143.02 186.009,1142.55 186.009,1142 C186.009,1141.45 185.562,1141 185.009,1141 L175.009,1141 C174.888,1141 174.009,1141 174.009,1142 L174.009,1152 C174.009,1152.55 174.457,1153 175.009,1153 C175.562,1153 175.947,1152.47 176.373,1152.05 L179.152,1149.27 C180.922,1151.36 182,1154.05 182,1157 C182,1163.63 176.627,1169 170,1169 C163.373,1169 158,1163.63 158,1157 C158,1151.06 162.327,1146.13 168,1145.18 L168,1141.14 C160.109,1142.12 154,1148.84 154,1157 C154,1165.84 161.164,1173 170,1173 C178.836,1173 186,1165.84 186,1157 C186,1152.94 184.484,1149.25 181.993,1146.43 L184.858,1143.56"
+                                                                        id="refresh" sketch:type="MSShapeGroup">
+
+                                                                </path>
+                                                        </g>
+                                                        </g>
+
+                                                </svg>
+                                        </button>
+                                </div>
                         </div>
+
 
                 </div>
                 <div class="right-col">
@@ -122,11 +141,17 @@
                 <p>&copy; 2023 <a class="folder-tab" href="https://www.hollyburdorff.com/" target="_">Holly Burdorff</a>
                         and
                         <a class="folder-tab" href="http://aberrator.com">Justin Linton</a>
+
                 </p>
 
                 <div class="footer-right">
-                        <button id="kofi"><a href="https://ko-fi.com" target="_"><svg height="22" width="80"
-                                                data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
+                        <!-- <button><img class="btn-img btn-pop" src="img/icon_twitter.svg" alt="Twitter icon"></button> -->
+                        <button class="btn-pop"><a href="https://www.instagram.com/thejunglecan/" target="_">
+                                        <img class="btn-img" style="height: 30px;" src="img/icon_insta.svg"
+                                                alt="Instagram icon">
+                                </a></button>
+                        <button class="btn-pop" id="kofi"><a href="https://ko-fi.com" target="_"><svg height="24"
+                                                width="80" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 101 40">
                                                 <defs>
                                                         <style>
@@ -184,9 +209,9 @@
                                                         d="M92.3,13.5a1.43,1.43,0,0,0-.3,1.1v1.2h2.3a1.37,1.37,0,0,1,1.4,1.4,1.37,1.37,0,0,1-1.4,1.4H92v8.9a1.5,1.5,0,0,1-.4,1.1,1.57,1.57,0,0,1-2.2,0,1.5,1.5,0,0,1-.4-1.1V18.6H87.7a1.37,1.37,0,0,1-1.4-1.4,1.37,1.37,0,0,1,1.4-1.4h1.4V14.6a4,4,0,0,1,1.3-3.1,5.17,5.17,0,0,1,3.7-1.2,2.93,2.93,0,0,1,1.6.4,1.21,1.21,0,0,1,.7,1.2,1.69,1.69,0,0,1-.3,1,1.27,1.27,0,0,1-.9.4h-.6c-.3-.1-.7-.1-1-.2A1.7,1.7,0,0,0,92.3,13.5Zm5.3.1a1,1,0,0,1-.3-1v-.5a1.16,1.16,0,0,1,.4-1,2.66,2.66,0,0,1,1.2-.3,2.38,2.38,0,0,1,1.2.3,1.28,1.28,0,0,1,.4,1v.5a1.28,1.28,0,0,1-.4,1,2.77,2.77,0,0,1-1.3.3A2.66,2.66,0,0,1,97.6,13.6Zm2.3,15a1.19,1.19,0,0,1-1.1.4,1.38,1.38,0,0,1-1.5-1.5V17.1a1.5,1.5,0,0,1,.4-1.1,1.19,1.19,0,0,1,1.1-.4,1.38,1.38,0,0,1,1.5,1.5V27.5a1.19,1.19,0,0,1-.4,1.1Z" />
                                         </svg></a></button>
 
-                        <button><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg height="22"
-                                                aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32"
-                                                data-view-component="true"
+                        <button class="btn-pop"><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg
+                                                height="24" aria-hidden="true" viewBox="0 0 16 16" version="1.1"
+                                                width="32" data-view-component="true"
                                                 class="octicon octicon-mark-github v-align-middle color-fg-default">
                                                 <path
                                                         d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
