--- a/Index.html
+++ b/Index.html
@@ -77,52 +77,17 @@
                                         d="M290.8 405.9 294 422l-.7.3c-2.1-3-5.2-5.8-5.3-9.8 0-2.2 0-5 1.8-6.9l1 .2zM297.7 422.5c-.4-.6-.9-1.1-1-1.8a725 725 0 0 1-2.4-12.9c-.1-.7-.2-1.4-.1-2.1 0-.4.7-.8 1-.8.4 0 1 .4 1 .7 1 5.5 1.8 11 2.6 16.5l-1.1.4zM282 532.8l-5.3 15.6-.8.1c-.2-.5-.6-1.2-.5-1.6l3-10.4c.4-1.2.9-2.3 1.5-3.3.3-.5 1-.6 1.6-.9l.6.5zM257 423c4 4.3 7.7 8.6 11.6 13l-.3.6c-.7-.1-1.6-.1-2.2-.4-1.3-.6-2.4-1.7-3.7-1.9-4.5-.8-5.8-4-6.4-8-.2-1 .2-2.1.3-3.3h.8zM233.8 500.2c.2-1.2 0-2.5.6-2.9 2-1.5 4-3.4 6.3-3.9 3-.6 6.3.1 9.4.2l.2 1.3-16.5 5.3zM359.3 428c-.1.8 0 1.6-.4 2.1a27 27 0 0 1-3 3.5l-6.6 6c-.5.5-1.1.8-2 .8 3-5 7.5-8.4 11.3-12.5l.7.2zM302 476.5l1.6-.5c1.6-.5 3.6-.8 4.3.9.7 1.5.7 3.6.3 5.3-.2.7-2.3 1.4-3.4 1.3-1.1 0-3-1-3.2-1.9-.6-2.8-.6-5.8-.8-8.7h.8l.5 3.6zm.6 2.9v1.1c1 .6 2 2 2.7 1.7 1-.4 2.3-1.6 2.5-2.6 0-.7-1.6-2.3-2.4-2.4-1 0-1.9 1.4-2.8 2.2zM401.9 522.1c-3.5-.4-7-2-7.5-4.4-.5-2.8.5-4.5 3.3-4 2.5.4 5 1.5 7.4 2.6 1.5.6 2.8 2 1.9 3.7-.7 1-2.4 1.5-3.6 2.2-.2.2-.6 0-1.5 0zM325.1 585.2c-.9 1.7 0 3.7-2.4 4.6-1.8.8-3.1.4-3.8-1.1-1.5-3.4-2.2-6.9-.7-10.4.4-.8 1.5-1.6 2.4-1.6.7-.1 1.8.7 2.1 1.5 1 2.2 1.7 4.6 2.4 7zM237 547.6c1.2 1.7 2.3 2.8 2.8 4 .5 1.3.1 2.5-1.7 2.8-.7.1-1.6.6-2.1 1.1-1.2 1.2-2.7 1.3-3.5.2-.7-.9-1-2.8-.4-3.5 1-1.6 2.8-2.8 4.9-4.6zM381 555.5l-5-5.4 3.2-3.5 2.3 8.6-.4.3zM362.6 559.5c1.3-1.5 2-2.9 3.2-3.5 1.1-.6 4.4 2.2 4.5 4 0 1.1 0 2.8-.7 3.3-.8.7-2.8 1-3.6.5-1.3-.9-2-2.5-3.4-4.3zM212 448.3c-3.4-.3-6-2.5-8.3-4.9-.4-.4-.2-2 .2-2.4 1-.7 2.5-1.5 3.6-1.4 3.3.6 6.2 2.2 8.5 4.7.8 1-.3 3.3-1.7 3.7-.7.2-1.5.2-2.3.3zM390.5 411.2c0 2-3.8 6.2-6 6.5-.7.2-1.5.5-2.3.5-.7 0-1.7-.1-2-.6-.6-.7-1.2-2-1-2.7 1.3-3.5 4.5-5 7.5-6.6 1.5-.7 3.8 1.3 3.8 2.9zM294.8 378v2c0 1.5-.1 2.8-2.1 3.1-1.8.3-3.4.2-3.8-1.9-.6-2.6-1.2-5.2-1.4-7.8-.3-2.4 1.3-3.8 3.4-3.5 1.2.1 2.7 1.4 3.2 2.6.7 1.7.6 3.6.8 5.5h-.1z" />
                         </svg>
 
-
-                        </svg>
-
-                        <div class="buttons-container">
-                                <div class="flex-container">
-                                        <button class="btn-pop" id="theme-toggle">
-                                                <svg class="btn-img" width="800px" height="800px" viewBox="0 0 48 48"
-                                                        xmlns="http://www.w3.org/2000/svg">
-                                                        <title>dark-mode</title>
-                                                        <g id="Layer_2" data-name="Layer 2">
-                                                                <g id="Icons">
-                                                                        <g>
-                                                                                <rect width="48" height="48"
-                                                                                        fill="none" />
-                                                                                <g>
-                                                                                        <path
-                                                                                                d="M14,24A10,10,0,0,0,24,34V14A10,10,0,0,0,14,24Z" />
-                                                                                        <path
-                                                                                                d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM6,24A18.1,18.1,0,0,1,24,6v8a10,10,0,0,1,0,20v8A18.1,18.1,0,0,1,6,24Z" />
-                                                                                </g>
-                                                                        </g>
-                                                                </g>
-                                                        </g>
-                                                </svg>
-                                        </button>
-                                        <button class="btn-pop" id="generate">
-                                                <svg class="btn-img" width="16px" height="16px" viewBox="0 0 32 32"
-                                                        version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                                                        xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-
-                                                        <g id="Icon-Set-Filled" sketch:type="MSLayerGroup"
-                                                                transform="translate(-154.000000, -1141.000000)">
-                                                                <path d="M184.858,1143.56 C185.397,1143.02 186.009,1142.55 186.009,1142 C186.009,1141.45 185.562,1141 185.009,1141 L175.009,1141 C174.888,1141 174.009,1141 174.009,1142 L174.009,1152 C174.009,1152.55 174.457,1153 175.009,1153 C175.562,1153 175.947,1152.47 176.373,1152.05 L179.152,1149.27 C180.922,1151.36 182,1154.05 182,1157 C182,1163.63 176.627,1169 170,1169 C163.373,1169 158,1163.63 158,1157 C158,1151.06 162.327,1146.13 168,1145.18 L168,1141.14 C160.109,1142.12 154,1148.84 154,1157 C154,1165.84 161.164,1173 170,1173 C178.836,1173 186,1165.84 186,1157 C186,1152.94 184.484,1149.25 181.993,1146.43 L184.858,1143.56"
-                                                                        id="refresh" sketch:type="MSShapeGroup">
-
-                                                                </path>
-                                                        </g>
-                                                        </g>
-
-                                                </svg>
-                                        </button>
+                        <div class="container">
+                                <button class="btn-pop" id="generate-button">
+                                        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                        d="M365.8 22.43c-10.6.2-22.6 2.5-36.5 7.6-51.7-7.9-149.3 1.1-219.4 67.5C91.73 113 75.93 132 63.51 154.1 5.036 258.4 43.62 394.3 150.4 457.6 257 520.8 390.1 487.3 448.5 383c48.1-85.5 30.6-192.7-36.4-263.2-7.9-3.5-16.1-6.1-24.4-5.9 1.7 1.4 3.1 2.7 4.7 4.1l-12.6 13.9c-2.3-2.2-5-4.6-7.2-6.3-1.3 4.3-1.6 10.1-.2 17.3 42.4 51.9 55 135.2 23.8 191.2-38.7 69.3-128.2 93.7-197.5 52.3-69.4-41.3-85.6-127.1-46.9-196.4 23.7-42.5 68.2-66.4 112.1-66.2 10.4 0 20.8 1.4 30.8 4.3-3.9-12.9-6-24.2-8.1-36.77l6.2-3.1c9.4-4.7 17.7-11.6 25.2-20.5l-5.6-.7 2.4-18.6c4.1.51 8.1 1.1 12.2 1.7l-1.1 6.9c5.2 3.14 10.6 6.44 16 9.7-9.4 14.3-20.7 26.4-34.4 34.67 2.7 14 7.5 30.6 15.4 46.5 14.2 26.1 32.9 50.5 59.1 53.9-14-17.6-22.8-34.6-26.8-50-4.5-17.3-3.1-33.2 6.1-44.3 6.8-8.27 17.5-12.37 29.7-12.07 4.1.1 8.3.6 12.7 1.6 16.5 3.97 35.5 14.47 56.8 32.47 8.2-10.5 9.8-23 7.6-37.07-31.5-9.2-45.4-70.8-102.3-70zm2.9 16.4c4.4.1 9.4 1.2 14.4 3.3 13 5.4 21.5 15.8 18.9 23.1-2.6 7.3-15.3 8.8-28.4 3.3-13.1-5.5-21.6-15.8-19-23.1 1.5-4.1 6.2-6.4 12.3-6.6zm-73.4 8l-.7 18.7c-6-.36-12.1-.6-18.1-.3l-.5-18.6c6.4-.27 12.9-.1 19.3.2zm-38.6 1l1.8 18.6c-6.3.78-12.2 1.29-17.6 2.5l-3.5-18.4c6.9-.99 12.8-2.16 19.3-2.6zm-38 7.29l4.6 17.81c-6.1 1.64-11 3.3-16.9 5.4l-6.5-17.5c7.9-2.65 11.8-4.19 18.8-5.71zm-36.9 13.31l8.2 16.8c-5.5 2.62-11.4 5.72-16 8.4l-9.3-16.2c5.8-3.17 11.9-6.32 17.1-9zM159 103.3c-5.4 3.9-9.3 7-14 10.9L132.9 100c5-4.5 10.9-8.79 15.4-12.27 3.2 5.27 7.1 10.45 10.7 15.57zm-40.4 10l13.3 13.1c-4.2 4.5-8.6 9.2-11.9 13.3l-14.5-11.9c4.2-5.2 9.2-10.6 13.1-14.5zm287.7 18.4c4.4 4.9 9.1 10.3 12.6 14.9L404.1 158c-3.7-4.8-8-9.7-11.6-13.6zM93.76 143.4L109.1 154c-3.4 5.1-6.7 10.6-9.41 15.1l-16.25-9.2c3.29-5.7 6.87-11.8 10.32-16.5zm336.34 19.2c3.6 5.6 7.1 11.9 9.6 17.1l-16.6 8.4c-3-5.8-5.6-10.4-8.8-15.5zM74.6 177.3l16.99 7.8c-2.53 5.7-4.93 11.7-6.66 16.5l-17.6-6.2c1.65-6.4 3.64-12.6 7.27-18.1zm373 20.3l.1.1v.1c2.2 6.1 4.4 12.3 5.9 18.6l-18 4.7c-1.8-5.9-3.6-11.9-5.5-16.9 5.9-2 11.7-4.3 17.5-6.6zM61.67 214l18.08 4.7c-1.45 6-2.71 12.3-3.6 17.5l-18.42-3.1c1.24-6.7 2.44-13.7 3.94-19.1zm396.03 21.5c.6 6.7 1.6 13.6 2 19.6l-18.6 1c-.3-5.8-1.1-11.6-1.8-17.4 5.6-1.2 12.4-2.2 18.4-3.2zM55.52 252.7l18.41 1c-.51 6 0 11.9 0 17.9l-18.67.7c-.15-6.8 0-13.8.26-19.6zm385.68 21.1l18.7 1c-.4 7.4-.9 12.7-1.8 19.5l-18.5-2.5c.9-6 1.3-12 1.6-18zm-362.73 33l-18.19 4.3c-1.51-6.3-2.45-12.8-3.32-19.2l18.52-2.5c.47 5.7 1.81 12.4 2.99 17.4zm357.83 2.3l18.2 4.3c-1.4 6.4-3.2 12.5-5.2 18.7v.1l-.1.1c-5.9-2.1-11.8-4-17.7-5.9v-.2c1.9-5.6 3.6-11.3 4.8-17.1zM83.39 323.8c2.16 6.2 4.23 11.1 6.62 16.5l-16.94 7.8c-2.96-5.8-5.04-12-7.17-18.2 5.61-2 12.5-4.2 17.49-6.1zm341.71 19.3l17.2 7.3c-2.8 6.7-5.6 11.8-8.5 17.6l-16.4-8.9c2.9-5.2 5.5-11.2 7.7-16zM98.28 355.9c3.22 5.2 6.52 10.7 9.82 14.8l-14.98 11.2c-4.1-5.6-8.23-11.6-11.13-16.4 4.67-3.5 10.88-6.7 16.29-9.6zm310.02 18.5l15.5 10.4c-4.1 6.1-7.1 10.4-11.3 15.7L397.8 389c3.7-4.7 7.1-9.6 10.5-14.6zm-288.9 10c4 4.5 8.3 8.7 12.6 12.8l-12.7 13.7c-4.8-4.5-9.8-9.6-13.8-13.8zm266.7 18l13.6 12.9c-5.1 5.2-9.3 9.4-14.2 13.6l-12.2-14.1c4.5-4.2 9.2-8.5 12.8-12.4zm-240.5 6.2c4.7 3.6 9.6 7.1 14.7 10.4l-10.2 15.7c-5.5-3.5-10.6-7.3-15.8-11.2zm213.8 17.2l10.7 15.3c-5.4 3.8-11.3 7.6-16.3 10.5l-9.4-16.2c5.8-3.3 9.8-6 15-9.6zm-183.6 2.4c5.2 3 10.6 5.6 16.1 8.1l-7.9 17c-5.8-2.8-11.6-5.6-17.3-8.7zm152.8 15.1l7.5 17.1c-6 2.8-12.2 4.9-18.5 6.9l-5.5-17.9c5.6-1.6 11.1-3.7 16.5-6.1zm-120 .1c5.8 2.2 11.8 4.2 16.8 5.8l-5.2 18c-6.4-2.1-13-4.2-18.5-6.5 2.3-5.7 4.7-12 6.9-17.3zm34 10c6 1.1 12.1 1.8 17.4 2.2l-1 18.7c-6.8-.9-13.8-1.4-19.8-2.5zm52.4.2l3.3 18.4c-6.6 1.6-12.6 2.3-19.7 2.3l-.9-18.6c5.8-.3 11.5-1.2 17.3-2.1z" />
+                                        </svg>
+                                </button>
+                                <div id="prompt">
+                                        <p>Click to generate</p>
                                 </div>
                         </div>
-
-
                 </div>
                 <div class="right-col">
                         <blockquote id="jungle-quote" cite="https://en.wikipedia.org/wiki/The_Jungle">
@@ -146,6 +111,25 @@
 
                 <div class="footer-right">
                         <!-- <button><img class="btn-img btn-pop" src="img/icon_twitter.svg" alt="Twitter icon"></button> -->
+                        <button class="btn-pop" id="theme-toggle">
+                                <svg class="btn-img" width="30px" height="17px" viewBox="0 0 48 48"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <title>dark-mode</title>
+                                        <g id="Layer_2" data-name="Layer 2">
+                                                <g id="Icons">
+                                                        <g>
+                                                                <rect width="48" height="48" fill="none" />
+                                                                <g>
+                                                                        <path
+                                                                                d="M14,24A10,10,0,0,0,24,34V14A10,10,0,0,0,14,24Z" />
+                                                                        <path
+                                                                                d="M24,2A22,22,0,1,0,46,24,21.9,21.9,0,0,0,24,2ZM6,24A18.1,18.1,0,0,1,24,6v8a10,10,0,0,1,0,20v8A18.1,18.1,0,0,1,6,24Z" />
+                                                                </g>
+                                                        </g>
+                                                </g>
+                                        </g>
+                                </svg>
+                        </button>
                         <button class="btn-pop"><a href="https://www.instagram.com/thejunglecan/" target="_">
                                         <img class="btn-img" style="height: 30px;" src="img/icon_insta.svg"
                                                 alt="Instagram icon">
@@ -173,10 +157,6 @@
 
                                                                 .cls-4 {
                                                                         fill: url(#linear-gradient);
-                                                                }
-
-                                                                .cls-5 {
-                                                                        fill: #26272a;
                                                                 }
                                                         </style>
                                                         <linearGradient id="linear-gradient" x1="9.55" y1="-1715.77"
@@ -208,7 +188,6 @@
                                                 <path class="cls-5"
                                                         d="M92.3,13.5a1.43,1.43,0,0,0-.3,1.1v1.2h2.3a1.37,1.37,0,0,1,1.4,1.4,1.37,1.37,0,0,1-1.4,1.4H92v8.9a1.5,1.5,0,0,1-.4,1.1,1.57,1.57,0,0,1-2.2,0,1.5,1.5,0,0,1-.4-1.1V18.6H87.7a1.37,1.37,0,0,1-1.4-1.4,1.37,1.37,0,0,1,1.4-1.4h1.4V14.6a4,4,0,0,1,1.3-3.1,5.17,5.17,0,0,1,3.7-1.2,2.93,2.93,0,0,1,1.6.4,1.21,1.21,0,0,1,.7,1.2,1.69,1.69,0,0,1-.3,1,1.27,1.27,0,0,1-.9.4h-.6c-.3-.1-.7-.1-1-.2A1.7,1.7,0,0,0,92.3,13.5Zm5.3.1a1,1,0,0,1-.3-1v-.5a1.16,1.16,0,0,1,.4-1,2.66,2.66,0,0,1,1.2-.3,2.38,2.38,0,0,1,1.2.3,1.28,1.28,0,0,1,.4,1v.5a1.28,1.28,0,0,1-.4,1,2.77,2.77,0,0,1-1.3.3A2.66,2.66,0,0,1,97.6,13.6Zm2.3,15a1.19,1.19,0,0,1-1.1.4,1.38,1.38,0,0,1-1.5-1.5V17.1a1.5,1.5,0,0,1,.4-1.1,1.19,1.19,0,0,1,1.1-.4,1.38,1.38,0,0,1,1.5,1.5V27.5a1.19,1.19,0,0,1-.4,1.1Z" />
                                         </svg></a></button>
-
                         <button class="btn-pop"><a href="https://github.com/aberrator9/the-jungle-can" target="_"><svg
                                                 height="24" aria-hidden="true" viewBox="0 0 16 16" version="1.1"
                                                 width="32" data-view-component="true"
