Add portrait mode functionality.

--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>The Jungle Can't Happen Here in Wonderland</title>
         <link href="styles.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
                                 </svg>
                         </a>
                 </button>
-                <button class="btn-pop" id="kofi"><a href="https://ko-fi.com" target="_">
+                <button class="btn-pop" id="kofi"><a href="https://ko-fi.com/thejunglecan" target="_">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1"
                                         viewBox="0 0 101 40" height="91%">
                                         <defs>
