--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <body>
         <div class="header">
                 <button class="btn-pop" id="theme-toggle">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="2 0 48 48" height="95%">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 51 51">
                                 <g data-name="Layer 2">
                                         <path fill="none" d="M0 0h48v48H0z" />
                                         <path d="M14 24a10 10 0 0 0 10 10V14a10 10 0 0 0-10 10Z" />
@@ -25,7 +25,7 @@
                 </button>
                 <button class="btn-pop">
                         <a href="https://www.instagram.com/thejunglecan/" target="_">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="3 3 52 54" height="122%">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="4 4 44 44">
                                         <circle cx="24" cy="24" r="20" fill="#C13584" />
                                         <path fill="#fff"
                                                 d="M24 14.2h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4a83.3 83.3 0 0 1-11.9-.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3a83.3 83.3 0 0 1 .4-11.9c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H24Zm0-2.2h-5c-1.2.1-2.1.3-2.9.6-.7.3-1.4.7-2 1.4-.8.7-1.2 1.4-1.5 2.1-.3.8-.5 1.7-.5 3a85.1 85.1 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.1 85.1 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.1 85.1 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L24 12Z" />
@@ -38,7 +38,7 @@
                         <a href="https://github.com/aberrator9/the-jungle-can" target="_">
                                 <svg aria-hidden="true"
                                         class="octicon octicon-mark-github v-align-middle color-fg-default"
-                                        data-view-component="true" viewBox="0 0 16 16" height="88%">
+                                        data-view-component="true" viewBox="0 0 18 18">
                                         <path
                                                 d="M8 0a8 8 0 0 1 8 8 8 8 0 0 1-5.5 7.6c-.3 0-.5-.2-.5-.4V13c0-.7-.2-1.2-.5-1.5 1.7-.2 3.6-.9 3.6-4 0-.8-.3-1.5-.8-2 0-.3.4-1 0-2.2 0 0-.8-.2-2.3.8a7.4 7.4 0 0 0-4 0c-1.5-1-2.2-.8-2.2-.8-.4 1.1-.1 2 0 2.1-.6.6-.9 1.3-.9 2.2 0 3 1.9 3.7 3.7 4-.3.1-.5.5-.6 1-.4.2-1.6.5-2.3-.7-.1-.2-.6-.8-1.2-.8-.7 0-.3.4 0 .5.3.2.7 1 .8 1.2.2.4.7 1.3 2.7 1v1.4c0 .2-.1.5-.5.4A8 8 0 0 1 0 8a8 8 0 0 1 8-8Z" />
                                 </svg>
@@ -46,7 +46,7 @@
                 </button>
                 <button class="btn-pop" id="kofi"><a href="https://ko-fi.com/thejunglecan" target="_">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1"
-                                        viewBox="0 0 101 40" height="91%">
+                                        viewBox="0 0 44 44">
                                         <defs>
                                                 <linearGradient id="linear-gradient" x1="9.6" x2="13.7" y1="-1715.8"
                                                         y2="-1728.5" gradientTransform="matrix(1 0 0 -1 4.3 -1707.7)"
@@ -67,7 +67,7 @@
                                                                 d="M17.2 26.5a.4.4 0 0 0 .3-.1s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.3 17 17.3 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a62.6 62.6 0 0 0 5.2 5.1c0 .2.1.2.2.2Z" />
                                                 </g>
                                         </g>
-                                      
+
                                 </svg>
 
                         </a>
