Fix left arrow mobile rotation bug.

--- a/Index.html
+++ b/Index.html
@@ -139,8 +139,11 @@
                         </svg>
                         <div class="flex-container">
                                 <svg class="arrow left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
-                                        <path d="M20.7 24 9.3 16l11.4-8z" />
+                                        <g xmlns="http://www.w3.org/2000/svg" transform="matrix(-1 0 0 -1 32 32)">
+                                                <path d="M20.7 24 9.3 16l11.4-8z" />
+                                        </g>
                                 </svg>
+
                                 <button class="btn-pop" id="generate-btn">
                                         <svg id="generate-img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
                                                 <path
