Add info button.

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,12 @@
 
 <body>
         <div class="header">
+                <button class="btn-pop" id="info">
+                        <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M.877 7.5a6.623 6.623 0 1 1 13.246 0 6.623 6.623 0 0 1-13.246 0ZM7.5 1.827a5.673 5.673 0 1 0 0 11.346 5.673 5.673 0 0 0 0-11.346Zm.75 8.673a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm-2.2-4.25c0-.678.585-1.325 1.45-1.325s1.45.647 1.45 1.325c0 .491-.27.742-.736 1.025-.051.032-.111.066-.176.104a5.28 5.28 0 0 0-.564.36c-.242.188-.524.493-.524.961a.55.55 0 0 0 1.1.004.443.443 0 0 1 .1-.098c.102-.079.215-.144.366-.232.078-.045.167-.097.27-.159.534-.325 1.264-.861 1.264-1.965 0-1.322-1.115-2.425-2.55-2.425-1.435 0-2.55 1.103-2.55 2.425a.55.55 0 0 0 1.1 0Z" />
+                        </svg>
+                </button>
                 <button class="btn-pop" id="theme-toggle">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 51 51">
                                 <g data-name="Layer 2">
@@ -21,7 +27,6 @@
                                                 d="M24 2a22 22 0 1 0 22 22A21.9 21.9 0 0 0 24 2ZM6 24A18.1 18.1 0 0 1 24 6v8a10 10 0 0 1 0 20v8A18.1 18.1 0 0 1 6 24Z" />
                                 </g>
                         </svg>
-
                 </button>
                 <button class="btn-pop">
                         <a href="https://www.instagram.com/thejunglecan/" target="_">
@@ -31,16 +36,6 @@
                                                 d="M24 14.2h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4a83.3 83.3 0 0 1-11.9-.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3a83.3 83.3 0 0 1 .4-11.9c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H24Zm0-2.2h-5c-1.2.1-2.1.3-2.9.6-.7.3-1.4.7-2 1.4-.8.7-1.2 1.4-1.5 2.1-.3.8-.5 1.7-.5 3a85.1 85.1 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.1 85.1 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.1 85.1 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L24 12Z" />
                                         <path fill="#fff"
                                                 d="M24 17.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4ZM24 28a4 4 0 1 1 0-8 4 4 0 0 1 0 8ZM31.9 17.6a1.4 1.4 0 1 1-3 0 1.4 1.4 0 0 1 3 0Z" />
-                                </svg>
-                        </a>
-                </button>
-                <button class="btn-pop">
-                        <a href="https://github.com/aberrator9/the-jungle-can" target="_">
-                                <svg aria-hidden="true"
-                                        class="octicon octicon-mark-github v-align-middle color-fg-default"
-                                        data-view-component="true" viewBox="0 0 18 18">
-                                        <path
-                                                d="M8 0a8 8 0 0 1 8 8 8 8 0 0 1-5.5 7.6c-.3 0-.5-.2-.5-.4V13c0-.7-.2-1.2-.5-1.5 1.7-.2 3.6-.9 3.6-4 0-.8-.3-1.5-.8-2 0-.3.4-1 0-2.2 0 0-.8-.2-2.3.8a7.4 7.4 0 0 0-4 0c-1.5-1-2.2-.8-2.2-.8-.4 1.1-.1 2 0 2.1-.6.6-.9 1.3-.9 2.2 0 3 1.9 3.7 3.7 4-.3.1-.5.5-.6 1-.4.2-1.6.5-2.3-.7-.1-.2-.6-.8-1.2-.8-.7 0-.3.4 0 .5.3.2.7 1 .8 1.2.2.4.7 1.3 2.7 1v1.4c0 .2-.1.5-.5.4A8 8 0 0 1 0 8a8 8 0 0 1 8-8Z" />
                                 </svg>
                         </a>
                 </button>
@@ -67,9 +62,7 @@
                                                                 d="M17.2 26.5a.4.4 0 0 0 .3-.1s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.3 17 17.3 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a62.6 62.6 0 0 0 5.2 5.1c0 .2.1.2.2.2Z" />
                                                 </g>
                                         </g>
-
                                 </svg>
-
                         </a>
                 </button>
         </div>
@@ -170,9 +163,9 @@
                 </div>
         </div>
         <footer>
-                <p>&copy; 2023 <a class="folder-tab" href="https://www.hollyburdorff.com/" target="_">Holly Burdorff</a>
+                <p>&copy; 2023 <a href="https://www.hollyburdorff.com/" target="_">Holly Burdorff</a>
                         and
-                        <a class="folder-tab" href="http://aberrator.com">Justin Linton</a>
+                        <a href="http://aberrator.com">Justin Linton</a>
                 </p>
         </footer>
 
