--- a/Index.html
+++ b/Index.html
@@ -23,14 +23,14 @@
                         </svg>
                 </button>
                 <button class="btn-pop" title="Instagram">
-                        <a href="https://www.instagram.com/thejunglecan/" target="_">
+                        <a href="https://www.instagram.com/thejunglecan/" target="_blank" rel="noopener noreferrer">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="4 4 44 44">
                                         <circle cx="24" cy="24" r="20" fill="#C13584" /> <path fill="#fff" d="M24 14.2h4.8c1.2 0 1.9.3 2.3.4.5.3 1 .5 1.4 1 .4.4.6.8.9 1.3.1.4.3 1 .4 2.3a83.3 83.3 0 0 1-.4 11.9c-.3.5-.5 1-1 1.4-.4.4-.8.6-1.3.9-.4.1-1 .3-2.3.4a83.3 83.3 0 0 1-11.9-.4c-.5-.3-1-.5-1.4-1-.4-.4-.6-.8-.9-1.3-.1-.4-.3-1-.4-2.3a83.3 83.3 0 0 1 .4-11.9c.3-.5.5-1 1-1.4.4-.4.8-.6 1.3-.9.4-.1 1-.3 2.3-.4H24Zm0-2.2h-5c-1.2.1-2.1.3-2.9.6-.7.3-1.4.7-2 1.4-.8.7-1.2 1.4-1.5 2.1-.3.8-.5 1.7-.5 3a85.1 85.1 0 0 0 .5 12.8c.3.7.7 1.4 1.4 2 .7.8 1.4 1.2 2.1 1.5.8.3 1.7.5 3 .5a85.1 85.1 0 0 0 12.8-.5c.7-.3 1.4-.7 2-1.4.8-.7 1.2-1.4 1.5-2.1.3-.8.5-1.7.5-3a85.1 85.1 0 0 0-.5-12.8c-.3-.7-.7-1.4-1.4-2-.7-.8-1.4-1.2-2.1-1.5-.8-.3-1.7-.5-3-.5L24 12Z" /> <path fill="#fff" d="M24 17.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4ZM24 28a4 4 0 1 1 0-8 4 4 0 0 1 0 8ZM31.9 17.6a1.4 1.4 0 1 1-3 0 1.4 1.4 0 0 1 3 0Z" />
                                 </svg>
                         </a>
                 </button>
                 <button class="btn-pop" id="kofi" title="Ko-fi">
-                        <a href="https://ko-fi.com/thejunglecan" target="_">
+                        <a href="https://ko-fi.com/thejunglecan" target="_blank" rel="noopener noreferrer">
                                 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 44 44">
                                         <defs> <linearGradient id="linear-gradient" x1="9.6" x2="13.7" y1="-1715.8" y2="-1728.5" gradientTransform="matrix(1 0 0 -1 4.3 -1707.7)" gradientUnits="userSpaceOnUse"> <stop offset="0" stop-color="#ff4ea3" /> <stop offset="1" stop-color="#ff5e5b" /> </linearGradient> </defs> <circle cx="20.4" cy="20" r="19.7" fill="#00b9fe" /> <g id="Layer_1-2" data-name="Layer 1-2"> <g id="Layer_1-3" data-name="Layer 1-3"> <path fill="#fff" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.1" d="M30.4 21.9a15.5 15.5 0 0 1-2.2.1v-7.2h1.5a3 3 0 0 1 2.5 1.2 3.6 3.6 0 0 1 .8 2.3 3.4 3.4 0 0 1-2.6 3.6Zm6.2-5a6.5 6.5 0 0 0-2.9-4.5 7.7 7.7 0 0 0-4.4-1.4h-22a1.3 1.3 0 0 0-1.1 1.2v.3s-.1 9.7.1 15a3.3 3.3 0 0 0 3.3 3.1s10.1 0 14.9-.1h.7c2.8-.7 3-3.3 3-4.7 5.5.2 9.4-3.7 8.4-8.9Z" /> <path fill="#ff5e5b" d="M17 26.4c.3.1.4 0 .4 0s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.2 17 17.2 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a60.2 60.2 0 0 0 5.1 5Z" /> <path fill="url(#linear-gradient)" d="M17.2 26.5a.4.4 0 0 0 .3-.1s3.5-3.2 5.1-5.1c1.4-1.7 1.5-4.4-.9-5.5S17.3 17 17.3 17a4 4 0 0 0-5.5-.6l-.1.1c-1.2 1.3-.8 3.5.1 4.7a62.6 62.6 0 0 0 5.2 5.1c0 .2.1.2.2.2Z" /> </g> </g>
                                 </svg>
@@ -75,9 +75,9 @@
                 </div>
         </div>
         <footer>
-                <p>&copy; 2023 <a href="https://www.hollyburdorff.com/" target="_">Holly Burdorff</a>
+                <p>&copy; 2023 <a href="https://www.hollyburdorff.com/" target="_blank" rel="noopener noreferrer">Holly Burdorff</a>
                         and
-                        <a href="http://aberrator.com">Justin Linton</a>
+                        <a href="http://aberrator.com" target="_blank" rel="noopener noreferrer">Justin Linton</a>
                 </p>
         </footer>
         <script src="theme.js" async defer></script>
