--- a/Index.html
+++ b/Index.html
@@ -80,8 +80,8 @@
                         <a href="http://aberrator.com" target="_blank" rel="noopener noreferrer">Justin Linton</a>
                 </p>
         </footer>
-        <script src="./js/theme.js" async defer></script>
-        <script src="./js/app.js" async defer></script>
+        <script src="./js/theme.js" async></script>
+        <script src="./js/app.js" defer></script>
 </body>
 
 </html>
